# Discord-Stock-Bot

./: README.md  pyproject.toml
src/: bot.py  main.py
